--- a/GenUS/war/GenUS.css
+++ b/GenUS/war/GenUS.css
@@ -1,6 +1,14 @@
 /** Add css rules here for your application. */
 
 
+.moveCursor {
+	cursor : move;
+}
+
+.pointerCursor {
+	cursor : pointer;
+}
+
 /** Example rules used by the template application (remove for your app) */
 h1 {
   font-size: 2em;
